--- a/portifolio/css/projects.css
+++ b/portifolio/css/projects.css
@@ -1,12 +1,12 @@
 @import url(./default.css);
 @import url(./vars.css);
-@import url(./footer.css);
 @import url(./header.css);
-@import url(./main.css);
-
+@import url(./menu.css);
+    
 body{
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 
     background-image: url(./../img/bg_body.png);
     background-size: cover;
