--- a/portifolio/css/projects.css
+++ b/portifolio/css/projects.css
@@ -2,7 +2,8 @@
 @import url(./vars.css);
 @import url(./header.css);
 @import url(./menu.css);
-    
+@import url(./banner.css);    
+
 body{
     width: 100vw;
     height: 100vh;
