--- a/portifolio/css/projects.css
+++ b/portifolio/css/projects.css
@@ -2,7 +2,8 @@
 @import url(./vars.css);
 @import url(./header.css);
 @import url(./menu.css);
-@import url(./banner.css);    
+@import url(./banner.css);  
+@import url(./cards.css);  
 
 body{
     width: 100vw;
