--- a/login_page/src/App.css
+++ b/login_page/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
+  height: 70vh;
+  width: 20vw;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+
+  margin: 15vh 0 0;
+  border-radius: 1vw;
+  box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
+
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Backgroud{
+  position: absolute;
+  height: 70vh;
+  width: 20vw;
+  border-radius: 1vw;
+  background-color: #33333380;
+  backdrop-filter: blur(5px);
+  z-index: -1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Text{
+  width: 80%;
+  text-align: start;
+}
+h1{
+  font-size: 2.5vw;
+}
+p{
+  font-size: 0.8vw;
+}
+
+.CreateAcount{
+  display: flex;
+  font-size: 1.2vw;
 }
