--- a/login_page/src/components/ui/btn_text/button_text.module.scss
+++ b/login_page/src/components/ui/btn_text/button_text.module.scss
@@ -1,18 +1,18 @@
-.ButtonText{
-    width: 15vw;
-    height: 2vw;
+.ButtonText {
+    width: 100%;
+    height: 5vh;
 
     background-color: white;
     border-radius: 0.2vw;
     border: none;
-    
+
     color: black;
     font-size: 1vw;
 
     cursor: pointer;
     transition: all 0.1s ease-in-out;
 
-    &:hover{
+    &:hover {
         transform: scale(1.02);
     }
 }
