--- a/login_page/src/components/ui/text_navigation/text_navigation.module.scss
+++ b/login_page/src/components/ui/text_navigation/text_navigation.module.scss
@@ -2,8 +2,8 @@
     background-color: transparent;
     border: none;
     
-    color: black;
-    font-size: 1vw;
+    color: white;
+    font-size: 0.8vw;
 
     cursor: pointer;
     transition: all 0.1s ease-in-out;
