att funcionalidade do login

--- a/login_page/src/components/models/login_btns/login_btns.module.scss
+++ b/login_page/src/components/models/login_btns/login_btns.module.scss
@@ -28,3 +28,14 @@
         }
     }
 }
+
+
+.red{
+    background-color: red;
+}
+.blue{
+    background-color: blue;
+}
+.green{
+    background-color: green;
+}
