--- a/login_page/src/pages/home_page/home.module.scss
+++ b/login_page/src/pages/home_page/home.module.scss
@@ -67,3 +67,16 @@
         }
     }
 }
+
+.AddCard{
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    h1{
+        padding: 0;
+    }
+
+    &:hover{
+        transform: scale(1.05);
+    }
+}
