--- a/login_page/src/App.css
+++ b/login_page/src/App.css
@@ -5,5 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("https://th.bing.com/th/id/R.e21cd6b865d33385c98a463b27bbe3f2?rik=ZVsHAUO5T9byFA&pid=ImgRaw&r=0");
+  /* background-image: url("https://th.bing.com/th/id/R.e21cd6b865d33385c98a463b27bbe3f2?rik=ZVsHAUO5T9byFA&pid=ImgRaw&r=0"); */
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
