--- a/login_page/src/styles/_global.css
+++ b/login_page/src/styles/_global.css
@@ -1,3 +1,12 @@
+:root[data-theme = 'dark']{
+  --bg-color: #333333;
+  --text-color: #ffffff;
+}
+:root[data-theme = 'light']{
+  --bg-color: #ffffff;
+  --text-color: #333333;
+}
+
 body{
   margin: 0;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
